# QtLab

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  README.md
cmake/: FindAravis.cmake  FindDCAMAPI.cmake  FindNIDAQmx.cmake  FindPIGCS.cmake  FindQwt.cmake  install_targets.cmake
docker/: CMakeLists.txt  Dockerfile
libqtlab/core/: CMakeLists.txt  logger.cpp  logmanager.cpp  logmanager.h
libqtlab/hw/: CMakeLists.txt
libqtlab/hw/hamamatsu/: CMakeLists.txt  dcamutils.cpp  orcaflash.cpp  orcaflash.h
libqtlab/hw/ni/: CMakeLists.txt  natinst.cpp  niabstracttask.cpp  niabstracttask.h
libqtlab/hw/pi/: CMakeLists.txt  pidaisychain.cpp  pidevice.cpp
libqtlab/hw/serial/: CMakeLists.txt  cobolt.cpp  filterwheel.cpp  serialport.cpp
qtlab/core/: CMakeLists.txt  logger.cpp  logger.h  logmanager.cpp  logmanager.h
qtlab/hw/aravis/: CMakeLists.txt  aravis.cpp  aravis.h  camera.cpp  camera.h
qtlab/hw/hamamatsu/: CMakeLists.txt  dcamutils.cpp  dcamutils.h  orcaflash.cpp  orcaflash.h
qtlab/hw/ni/: .gitignore  CMakeLists.txt  NIDAQmx_dummy.cpp  NIDAQmx_wrapper_methods.cpp  NIDAQmx_wrapper_methods.h  generate_wrappers.sh  natinst.cpp  natinst.h  niabstracttask.cpp  niabstracttask.h  nitask.cpp  nitask.h  wrapper.cocci  wrapper_ni.cocci  wrapper_task.cocci
qtlab/hw/pi/: CMakeLists.txt  pidaisychain.cpp  pidaisychain.h  pidevice.cpp  pidevice.h
qtlab/hw/pi-widgets/: CMakeLists.txt  picontrollersettingswidget.cpp  picontrollersettingswidget.h  pipositioncontrolwidget.cpp  pipositioncontrolwidget.h
qtlab/hw/serial/: AA_MPDSnCxx.cpp  AA_MPDSnCxx.h  CMakeLists.txt  aotf.cpp  aotf.h  cobolt.cpp  cobolt.h  filterwheel.cpp  filterwheel.h  serialdevice.cpp  serialdevice.h  serialport.cpp  serialport.h
qtlab/hw/serial-widgets/: CMakeLists.txt  aa_aotf_widget.cpp  aa_aotf_widget.h
qtlab/hw/thorlabs-mc/: CMakeLists.txt  api.cc  api.h  api.hpp  device.h  device.hpp  message_codes.h  message_codes.hpp  messages.h  messages.hpp  motorcontroller.cpp  motorcontroller.h
qtlab/io/: CMakeLists.txt  tiffwriter.cpp  tiffwriter.h
qtlab/widgets/: CMakeLists.txt  aspectratiowidget.cpp  aspectratiowidget.h  cameradisplay.cpp  cameradisplay.h  cameraplot.cpp  cameraplot.h  colormaps.cpp  customspinbox.cpp  customspinbox.h  logwidget.cpp  logwidget.h  picontrollersettingswidget.cpp  pipositioncontrolwidget.cpp  pipositioncontrolwidget.h  pixmapwidget.cpp  pixmapwidget.h  timeplot.cpp  timeplot.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt
